<resources>
  <string name="app_name">Carry</string>

  // Auth strings
  <string name="auth_email_hint">E-mail</string>
  <string name="auth_subtitle">Sua lista de compras digital!</string>
  <string name="auth_signin_button_label">Entrar</string>
  <string name="auth_signup_button_label">Cadastrar</string>
  <string name="auth_alternative_text">ou</string>
  <string name="auth_signin_anonymously_button_label">Entrar de forma anônima</string>
  <string name="auth_password_hint">Senha</string>
  <string name="auth_password_confirmation_hint">Confirmação de senha</string>

  <string name="signin_go_to_signup">Não possui uma conta? Cadastre-se aqui</string>
  <string name="signup_go_to_signin">Já possui uma conta? Faça o login aqui</string>

  // Auth errors
  <string name="auth_network_request_failed_error">Erro ao fazer login. Cheque sua conexão.</string>
  <string name="auth_account_blocked_error">Serviço temporariamente indisponível. Tente novamente mais tarde.</string>

  <string name="signin_wrong_credentials_error">E-mail ou senha inválidos.</string>
  <string name="signin_generic_error">Erro ao fazer login.</string>

  <string name="signup_invalid_email_error">E-mail inválido.</string>
  <string name="signup_email_already_in_use_error">Este e-mail já está em uso.</string>
  <string name="signup_weak_password_error">Senha muito fraca. Tente uma senha diferente.</string>
  <string name="signup_generic_error">Erro ao fazer cadastro.</string>
  <string name="signup_passwords_dont_match_error">Senhas não coincidem.</string>

  // Units of measurement
  <string name="unit_measurement">un</string>
  <string name="liter_measurement">l</string>
  <string name="kilogram_measurement">kg</string>
  <string name="milligram_measurement">mg</string>
  <string name="gram_measurement">g</string>

  <string name="content_description_unit_measurement">unidade</string>
  <string name="content_description_liter_measurement">litro</string>
  <string name="content_description_kilogram_measurement">kilograma</string>
  <string name="content_description_milligram_measurement">milligrama</string>
  <string name="content_description_gram_measurement">grama</string>

  // Nav graph labels
  <string name="label_shopping_item_list">Lista de compras</string>
  <string name="label_signup">Cadastro</string>
  <string name="label_signin">Login</string>
  <string name="label_new_shopping_item">Novo item</string>

  // New shopping item strings
  <string name="shopping_item_name_hint">Digite o nome do item</string>
  <string name="shopping_item_description_hint">Descriçao opcional do item</string>
  <string name="shopping_item_amount_hint">Quantidade</string>
  <string name="shopping_item_unit_of_measurement_hint">Unidade de medida</string>
  <string name="shopping_item_price_hint">Preço</string>
  <string name="label_edit_shopping_item">Editar item</string>
  <string name="new_shopping_item_button_label">Criar item</string>
  <string name="edit_shopping_item_button_label">Editar item</string>
  <string name="delete_shopping_item_button_label">Deletar item</string>

  // Content description
  <string name="content_description_new_item">Novo item</string>
  <string name="content_description_shopping_item_list">Itens de compra</string>
  <string name="content_description_shopping_item">Item %1$d - %2$s</string>
  <string name="content_description_shopping_item_with_unit">Item %1$d - %2$s, %3$d unidades</string>
  <string name="content_description_shopping_item_checkbox_not_selected">Marcar item %1$d - %2$s como concluido</string>
  <string name="content_description_shopping_item_checkbox_selected">Marcar item %1$d - %2$s como não concluído</string>

</resources>