<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:app="http://schemas.android.com/apk/res-auto"
  xmlns:tools="http://schemas.android.com/tools"
  android:layout_width="match_parent"
  android:layout_height="match_parent"
  android:padding="18dp"
  tools:context=".shoppingitem.ui.NewShoppingItemFragment">

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/name_text_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:hint="@string/shopping_item_name_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toTopOf="parent">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/name_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/description_text_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/shopping_item_description_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@+id/name_text_field">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/description_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/amount_text_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/shopping_item_amount_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/description_text_field"
    app:layout_constraintWidth_percent="0.45">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/amount_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/unit_text_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.ExposedDropdownMenu"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    app:layout_constraintRight_toRightOf="parent"
    app:layout_constraintTop_toBottomOf="@id/description_text_field"
    app:layout_constraintWidth_percent="0.5">

    <AutoCompleteTextView
      android:id="@+id/unit_auto_complete_text_view"
      android:layout_width="match_parent"
      android:layout_height="wrap_content"
      android:hint="@string/unit_measurement" />
  </com.google.android.material.textfield.TextInputLayout>


  <com.google.android.material.textfield.TextInputLayout
    android:id="@+id/price_text_field"
    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
    android:layout_width="0dp"
    android:layout_height="wrap_content"
    android:layout_marginTop="16dp"
    android:hint="@string/shopping_item_price_hint"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintTop_toBottomOf="@id/amount_text_field"
    app:layout_constraintWidth_percent="0.45">

    <com.google.android.material.textfield.TextInputEditText
      android:id="@+id/price_edit_text"
      android:layout_width="match_parent"
      android:layout_height="wrap_content" />
  </com.google.android.material.textfield.TextInputLayout>

  <Button
    android:id="@+id/submit_button"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:enabled="false"
    android:text="Criar item"
    android:textAllCaps="false"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintLeft_toLeftOf="parent"
    app:layout_constraintRight_toRightOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
